[tool.poetry]
packages = [
  { include = "brain_games" },
]
name = "PetrMixayloff_brain_games"
version = "0.9.0"
description = "Test python project 'brain games'."
authors = ["PetrMixayloff"]
repository = "https://test.pypi.org/simple/petrmixayloff-brain-games"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: Freeware",
    "Programming Language :: Python",
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "3.8.2"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:even_game"
brain-calc = "brain_games.scripts.brain_calc:calc_game"
brain-gcd = "brain_games.scripts.brain_gcd:gcd_game"
brain-progression = "brain_games.scripts.brain_progression:progression_game"
brain-prime = "brain_games.scripts.brain_prime:prime_game"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
